--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,6 @@ DB_USER=root
 DB_PASSWORD=your_password
 DB_NAME=media_platform
 PORT=3000
+accessKeyId=ACCESS_KEY
+secretAccessKey=SECRET_KEY
+BUCKET_NAME=S3_BUCKET_NAME
