--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.689.0",
-    "@aws-sdk/s3-request-presigner": "^3.689.0",
-    "aws-sdk": "^2.1692.0",
+    "@google-cloud/storage": "^7.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -39,6 +37,7 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-testing-library": "^6.4.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
