--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,6 @@ jobs:
       - name: SSH into GCP and Pull Latest
         run: |
           ssh ${{ secrets.GCP_USER }}@${{ secrets.GCP_PUBLIC_IP }} << 'EOF'
-            cd ~/odoo-nginx/od18
+            cd ~/media-app/backend
             git pull origin main
-            sudo docker compose down od18
-            sudo docker compose up -d --build od18
           EOF
